--- a/keyPresstest.html
+++ b/keyPresstest.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style> body {margin: 0px;}</style>
 	</head>
 
 	<body onkeypress="detectKeypress(event)" > 
-		<p id="text"></p>
 		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="js/three.min.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script>
+		
+			//----------------------------------------------------------
+			// GLOBAL VARIABLES
+			var planeWidth = 450;
+			var planeHeight = 450;
+			var zombies = [];
+			
+			//----------------------------------------------------------
+			//FUNCTIONS
+			
 			// KEYCODES w=119 a=97, s=115, d=100, 
 			function detectKeypress(e){	
 				//alert(e.keyCode);
@@ -42,6 +52,9 @@
 				});
 			}
 			
+			//----------------------------------------------------------
+			// INITIALIZE
+			
 			// renderer
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize(window.innerWidth, window.innerHeight);
@@ -49,23 +62,29 @@
 			
 			// camera
 			var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
-			camera.position.y = -450;
-			camera.position.z = 400;
+			camera.position.y = -600;
+			camera.position.z = 500;
 			camera.rotation.x = 45 * (Math.PI / 180);
 			
 			// scene
 			var scene = new THREE.Scene();
 			
 			// plane			
-			var plane = new THREE.Mesh(new THREE.PlaneGeometry(300, 300), new THREE.MeshNormalMaterial());
+			var plane = new THREE.Mesh(new THREE.PlaneGeometry(planeWidth, planeHeight), new THREE.MeshNormalMaterial({color: 0xff0000}));
 			plane.overdraw = true;
 			scene.add(plane);
 			
-			//sphere
-			var sphereGeometry = new THREE.SphereGeometry( 50, 32, 32 );
-			var sphereMaterial = new THREE.MeshBasicMaterial( {color: 0xff0000} );
-			var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-			scene.add( sphere );
+			
+			//Spawn zombies at random places
+			for( i = 0; i < 10; i++ ){
+				var zombie = new THREE.Mesh( new THREE.CylinderGeometry( 5, 5, 20, 32 ), new THREE.MeshBasicMaterial( {color: 0xffff00}) );		
+				zombie.position.x = Math.floor(Math.random() * planeWidth) - planeWidth / 2;
+				zombie.position.y = Math.floor(Math.random() * planeWidth) - planeWidth / 2;
+				zombies[i] = zombie;
+				scene.add(zombie);
+			}
+			
+			console.log(zombies);
 
 
 			  // Add OrbitControls so that we can pan around with the mouse.
